--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,5 +21,5 @@
 
     <dimen name="circle">115dp</dimen>
     <dimen name="bottom_view_height">96dp</dimen>
-    "96dp
+    <dimen name="top_view_height">56dp</dimen>
 </resources>
